# CNDA

./: CMakeLists.txt‎  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  ci_python.yml
include/cnda/: contiguous_nd.hpp
python/cnda/: __init__.py  binding.cpp
tests/: CMakeLists.txt  test_accessors_python.py  test_bounds_checking_python.py  test_dtypes_python.py  test_sanity.cpp  test_sanity_python.py  test_view.cpp  test_view_python.py
tests/cpp/core/: test_dtypes.cpp
tests/python/: __init__.py
tests/python/aos/: __init__.py  test_basic_python.py  test_field_layout_python.py  test_indexing_python.py
tests/python/core/: test_bounds_checking_python.py  test_sanity_python.py  test_view_python.py
