[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "cnda"
version = "0.1.0"
description = "Python bindings for ContiguousND"
authors = [
  { name = "Your Name", email = "your_email@example.com" }
]
requires-python = ">=3.10"
