[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "cnda"
version = "0.1.0"
description = "Python bindings for ContiguousND"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]



